@@ -48153,8 +48153,8 @@
 			</accessory>
 			<accessory>
 				<id>63a4c7fe-847e-46e6-a99d-da0f39e63b8a</id>
-				<name>Plastic Components 6</name>
-				<translate>Plastik-Komponenten 6</translate>
+				<name>Plastic Components</name>
+				<translate>Plastik-Komponenten</translate>
 				<altpage>12</altpage>
 			</accessory>
 			<accessory>
